Display bug on mobile screens fixed.

--- a/css/agency.css
+++ b/css/agency.css
@@ -40,6 +40,7 @@ h6 {
   font-size: 40px;
   margin-top: 0;
   margin-bottom: 15px;
+  
 }
 
 .page-section h3.section-subheading {
@@ -734,7 +735,8 @@ background: linear-gradient(255deg, rgba(255,0,0,1) 0%, rgba(255,0,146,1) 50%, r
    color: black;
 }
 .img-logo {
-  width: 25em;
+  margin-top: 10em;
+  width: 20em;
 }
 .card-logo {
   border: 1px;
@@ -752,4 +754,10 @@ background: linear-gradient(255deg, rgba(255,0,0,1) 0%, rgba(255,0,146,1) 50%, r
 }
 #external{
   color: #000000 !important;
+}
+
+.row{
+  width: 100vw;
+  /* overflow-y: hidden; */
+  
 }
